<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Coco-nut</string>
    <string name="app_name_locale">코코넛</string>
    <string name="action_settings">Settings</string>
    
    <string name="team_name">팀 이기주의자들</string>
    
    <string name="title_my_works">나의 일</string>
    <string name="title_briefing">상황판</string>
    <string name="title_to_do">할 일</string>
    <string name="title_in_progress">진행 중</string>
    <string name="title_done">완료</string>
    <string name="title_confirm">확인</string>
    <string name="title_cancel">취소</string>
    <string name="title_succeed">성공</string>
    <string name="title_error">오류</string>
    <string name="title_create">만들기</string>
    <string name="title_checklist">체크리스트</string>
    <string name="title_search">검색</string>
    
    <string name="error_network">네트워크 통신이 원활하지 않습니다. 잠시후 다시 시도 해주세요.</string>
    <string name="err_empty_login_form">아이디 혹은 패스워드를 입력해주십시오</string>
    <string name="error_equaled_password">패쓰워드가 일치하지 않습니다. 다시 입력하세요.</string>
    <string name="error_login_fail">로그인에 실패하였습니다. ID, 비밀번호를 확인하세요.</string>
    <string name="error_userid_already_exist">이미 존재하는 사용자입니다. 새로운 ID를 입력하세요.</string>
    <string name="error_empty_project_name">생성할 프로젝트의 이름을 입력해주십시오.</string>
    <string name="error_require_signup">등록되지 않은 회원입니다. 회원으로 가입하세요.</string>
    <string name="error_require_card_title">카드의 제목은 필수 입력입니다.</string>
    <string name="err_empty_user_profile">수정 내역을 입력하세요</string>
    <string name="error_require_vote_info">평가하지 않은 참여자가 있습니다. 평가를 완료해주세요.</string>
    
    <string name="error_empty_password">패쓰워드를 입력하여 주십시오</string>
    <string name="error_not_matched_password">새 패쓰워드가 일치하지 않습니다. 다시 입력하세요.</string>
    <string name="error_not_proper_length_password">비밀 번호는 최소 8자리 이상이어야 합니다.</string>
    
    <string name="login_message">코코넛은 전화번호의 본인 사용 확인 및\n 부정사용 방지를 위하여 인증을 필요로 합니다.</string>
    <string name="login">로그인</string>
    <string name="login_id">ID</string>
    <string name="login_passwd">PW</string>
    
    <string name="signup">회원가입</string>
    <string name="signup_require">아직 회원이 아니신가요?</string>
    <string name="signup_with_underline"><u>회원가입</u></string>
    <string name="signup_message">코코넛의 회원가입을 환영합니다\n회원님의 이메일 주소, 핸드폰 번호가 서버에 저장됩니다</string>
    <string name="signup_succeed">회원가입에 성공하였습니다, @userid 님</string>
    
    <string name="user_setting">정보수정</string>
    <string name="user_withdraw">회원탈퇴</string>
    <string name="user_setting_message"><b>아이콘을 터치하여 사진을 등록하세요</b></string>
    
    <string name="setting_logout">로그아웃</string>
    <string name="setting_logout_message">로그아웃 하시겠습니까?</string>
    <string name="change_passwd">비밀번호 변경</string>
    <string name="change_passwd_message">비밀번호가 변경되었습니다. 보안을 위하여 다음번 앱 시작시 로그인이 필요합니다</string>
    
    <string name="create_group">그룹 이름을 입력해 주세요</string>
    <string name="create_group_select">그룹 템플릿을 선택해 주세요</string>
    <string name="create_group_succeed">프로젝트 생성에 성공하였습니다</string>
    
    <string name="create_card_succeed">카드 등록에 성공하였습니다</string>
    <string name="send_comment_succeed">댓글이 등록 되었습니다</string>
    <string name="doing_send_comment">댓글 등록 중....</string>
    
    <string name="card_detail_title">제목</string>
    <string name="card_detail_subtitle">부제목</string>
    <string name="card_detail_description">상세 설명</string>
    <string name="card_detail_start_date">시작 일자</string>
    <string name="card_detail_start_time">시작 시간</string>
    <string name="card_detail_dueto_date">만료 일자</string>
    <string name="card_detail_dueto_time">만료 시간</string>
    <string name="card_detail_participant">참가자 수정</string>
    <string name="card_detail_label">라벨</string>
</resources>
