<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="30dp" >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_main_coconut" />
        <!-- 안내 메시지 -->
        <TextView
            android:id="@+id/txtSignUpMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/font_common_coconut"
            android:textSize="@dimen/login_font_size"
            android:textStyle="normal|italic"
            android:text="@string/signup_message"
            android:gravity="center"
            android:visibility="visible" />    
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="80dp"
        android:orientation="vertical" >
        
        <!-- ID -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView 
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/font_common_coconut"
                android:textSize="@dimen/login_id_font_size"
                android:text="@string/login_id" />
            <EditText
                android:id="@+id/edTxtSignUpId"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="textEmailAddress" >
            </EditText>
        </LinearLayout>
        
        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView 
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/font_common_coconut"
                android:textSize="@dimen/login_id_font_size"
                android:text="@string/login_passwd" />
            <EditText
                android:id="@+id/edTxtSignUpPassword"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="textPassword" >
                <requestFocus />
            </EditText>
        </LinearLayout>
        
        <!-- Password 확인-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp" >
            <TextView 
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/font_common_coconut"
                android:textSize="@dimen/login_id_font_size" />
            <EditText
                android:id="@+id/edTxtSignUpConfirmPassword"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="textPassword" >
            </EditText>
        </LinearLayout>
        
        <!-- 회원가입 -->
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/button_bg_coconut"
            android:textColor="@color/white_coconut"
            android:text="@string/signup"
            android:layout_marginBottom="20dp"
            />
        
    </LinearLayout>
</RelativeLayout>
