<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white_coconut" >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="60dp"
        android:paddingRight="60dp"
        >
        <EditText
	        android:id="@+id/edTxtCreateProj"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:gravity="center"
	        android:hint="@string/create_group"
	        android:inputType="text" >
	    </EditText>
	    <requestFocus />    
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2.5"
        android:orientation="horizontal"
        android:gravity="center" >
        <ImageView
            android:id="@+id/imgSelectedGroupTemplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_group_templete_0" />
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:gravity="center" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/font_common_coconut"
            android:text="@string/create_group_select"
            android:textSize="12sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center" >
            <ImageView
                android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/ic_arrow_left" />
            <HorizontalScrollView
	            android:id="@+id/label_scroll"
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:scrollbars="none" >
	            <LinearLayout
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:gravity="center"
	                android:orientation="horizontal">
	                <ImageView
	                    android:id="@+id/imgGroupTemplete0"
	                    android:layout_width="50dp"
		                android:layout_height="50dp"
		                android:tag="0"
		                android:padding="3dp"
		                android:src="@drawable/ic_group_templete_0" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete1"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="1"
                        android:src="@drawable/ic_group_templete_1" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete2"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="2"
                        android:src="@drawable/ic_group_templete_2" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete3"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="3"
                        android:src="@drawable/ic_group_templete_3" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete4"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="4"
                        android:src="@drawable/ic_group_templete_4" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete5"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="5"
                        android:src="@drawable/ic_group_templete_5" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete6"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="6"
                        android:src="@drawable/ic_group_templete_6" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete7"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="7"
                        android:src="@drawable/ic_group_templete_7" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete8"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="8"
                        android:src="@drawable/ic_group_templete_8" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete9"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="9"
                        android:src="@drawable/ic_group_templete_9" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete10"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="10"
                        android:src="@drawable/ic_group_templete_10" />
	                <ImageView
                        android:id="@+id/imgGroupTemplete11"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:padding="3dp"
                        android:tag="11"
                        android:src="@drawable/ic_group_templete_11" />
	            </LinearLayout>
            </HorizontalScrollView>
	        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="100dp"
        android:paddingRight="100dp"
        >
	    <!-- 회원가입 -->
        <Button
            android:id="@+id/btnCreateGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_create"
            />
    </LinearLayout>
</LinearLayout>
